# Snekken

./: .project.gf  CMakeLists.txt  README.md  shell.nix
.github/workflows/: cmake-multi-platform.yml
assets/: 400881__ekemet__ko.ogg.~1~  Enter-name.ase  Enter-name_1.ase  KAMEHAMEHA.ase  Sprite-0001.ase  Sprite-0005.ase
raylib-master/: shell.nix
src/: main.c  snake.c  snake.h
